Scanned codebase with SonarLinter, refactored to apply these fixes