@@ -2,7 +2,6 @@ package frc.robot.commands.auton;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.pathplanner.lib.auto.AutoBuilder;
 import com.pathplanner.lib.path.PathPlannerPath;
@@ -10,8 +9,8 @@ import com.pathplanner.lib.path.PathPlannerPath;
 import edu.wpi.first.math.geometry.Pose2d;
 import edu.wpi.first.math.geometry.Rotation2d;
 import edu.wpi.first.math.kinematics.ChassisSpeeds;
+import edu.wpi.first.wpilibj.RobotBase;
 import edu.wpi.first.wpilibj2.command.Commands;
-import frc.robot.Robot;
 import frc.robot.Constants.RobotStates.StartingPosition;
 import frc.robot.commands.auton.utils.AutonCommand;
 import frc.robot.commands.auton.utils.AutonUtils;
@@ -26,7 +25,7 @@ public class MoveOutAuton extends AutonCommand {
 
         paths = getAutonPaths(position);
 
-        if (Robot.isSimulation()) {
+        if (RobotBase.isSimulation()) {
             addCommands(utils.resetOdometry(paths.get(0)));
         }
 
@@ -51,7 +50,7 @@ public class MoveOutAuton extends AutonCommand {
         return paths.stream()
             .map(PathPlannerPath::getPathPoses)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
