@@ -2,7 +2,6 @@ package frc.robot.commands.auton;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.pathplanner.lib.auto.AutoBuilder;
 import com.pathplanner.lib.path.PathPlannerPath;
@@ -10,11 +9,11 @@ import com.pathplanner.lib.path.PathPlannerPath;
 import edu.wpi.first.math.geometry.Pose2d;
 import edu.wpi.first.math.geometry.Rotation2d;
 import edu.wpi.first.math.kinematics.ChassisSpeeds;
+import edu.wpi.first.wpilibj.RobotBase;
 import edu.wpi.first.wpilibj2.command.Commands;
 import frc.robot.Constants.RobotStates.ArmStates;
 import frc.robot.Constants.RobotStates.StartingPosition;
 import frc.robot.Constants.RobotStates.ElevatorStates;
-import frc.robot.Robot;
 import frc.robot.commands.armivator.ArmivatorCommands;
 import frc.robot.commands.auton.utils.AutonCommand;
 import frc.robot.commands.auton.utils.AutonUtils;
@@ -28,7 +27,7 @@ public class OneCoralAuton extends AutonCommand {
         this.utils = utils;
         this.paths = getAutonPaths(position);
 
-        if (Robot.isSimulation()) {
+        if (RobotBase.isSimulation()) {
             addCommands(utils.resetOdometry(paths.get(0)));
         }
 
@@ -65,7 +64,7 @@ public class OneCoralAuton extends AutonCommand {
         return paths.stream()
             .map(PathPlannerPath::getPathPoses)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
